# rode-backend

./: compose.yaml  schema.sql
judges/: Cargo.toml  clorinde.toml  diesel.toml
judges/algorithm-judge/: Cargo.toml  Dockerfile  build.rs
judges/algorithm-judge/src/: config.rs  main.rs
judges/crates/database/: Cargo.toml
judges/crates/database/src/: lib.rs  queries.rs  question.rs  schema.rs  submission_history.rs  test_case.rs
judges/crates/database/src/queries/: question.rs  submission.rs  submission_detail.rs  test_case.rs
judges/crates/s3-wrapper/: Cargo.toml
judges/crates/s3-wrapper/src/: error.rs  lib.rs
judges/html-css-judge/: Cargo.toml
judges/html-css-judge/src/: browser.rs  config.rs  main.rs
judges/html-judge/: Cargo.toml  Dockerfile  build.rs
judges/html-judge/src/: browser.rs  config.rs  main.rs
judges/migrations/2025-05-03-100926_init/: up.sql
judges/queries/: question.sql  submission.sql  submission_detail.sql  test_case.sql
