[package]
name = "algorithm-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bstr.workspace = true
code-executor.workspace = true
config.workspace = true
database.workspace = true
futures.workspace = true
lapin.workspace = true
s3-wrapper.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
