[package]
name = "html-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
chromiumoxide = { workspace = true, features = ["tokio-runtime"] }
config = { workspace = true }
database = { workspace = true }
futures = { workspace = true }
html-image-comparer = { workspace = true }
lapin = { workspace = true }
s3-wrapper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
uuid = { workspace = true, features = ["v4"] }
